--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
             <div class="collapse navbar-collapse" id="navegacion">
                 <a href="index.html" class="nav-item nav-link text-success">Home</a>
                 <a href="animales-musica.html" class="nav-item nav-link text-primary">Animales y Musica</a>
-                <a href="juegos-programacion.html" class="nav-item nav-link text-warning">Juegos y Programacion</a>
+                <a href="juegos-programacion.html" class="nav-item nav-link text-warning">Juegos y Programación</a>
                 <a href="#" class="nav-item nav-link text-danger">Desactivado</a>
-                <input type="text" placeholder="Search">
+                <div class="input-group col-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="search"><i class="fas fa-search"></i></span>
+                  </div>
+                  <input type="text" class="form-control" placeholder="Search">
+                </div>
             </div>
         </nav>
     <!-- Optional JavaScript -->
